--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
         <header class="header-br">
             <div class="container main-flex"> 
             <nav class="main-nav">
-                <a href="./index.html" class="logo ">Web<span class="logo-title ">Studio</span></a>
+                <a href="./index.html" class="main-nav__logo ">Web<span class="main-nav__title ">Studio</span></a>
                 <ul class="site-nav list currnet-box ">
-                    <li class="nav-link"><a href="./index.html" class="link currnet">Студия</a></li>
-                    <li class="nav-link"><a href="./portfolio.html" class="link ">Портфолио</a></li>
-                    <li class="nav-link"><a href="#" class="link">Контакты</a></li>
+                    <li class="site-nav__navigation"><a href="./index.html" class="site-nav__link currnet">Студия</a></li>
+                    <li class="site-nav__navigation"><a href="./portfolio.html" class="site-nav__link ">Портфолио</a></li>
+                    <li class="site-nav__navigation"><a href="#" class="site-nav__link">Контакты</a></li>
                 </ul>
             </nav>                        
-            <ul class="contact list">
-                <li class="contact-list"><a href="mailto:info@devstudio.com" class="link-contact">
-                   <svg class="header-icon" width="16" height="16" ><use href="./images/icon/icon.svg#icon-envelope"></use></svg>info@devstudio.com</a>
+            <ul class="main-contact list" >
+                <li class="main-contact__list"><a href="mailto:info@devstudio.com" class="main-contact__link">
+                   <svg class="main-contact__icon" width="16" height="16" ><use href="./images/icon/icon.svg#icon-envelope"></use></svg>info@devstudio.com</a>
                 </li>
-                <li class="contact-list">
-                    <a href="tel:+380961111111" class="link-contact">
-                        <svg class="header-icon" width="16" height="16" ><use href="./images/icon/icon.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
+                <li class="main-contact__list">
+                    <a href="tel:+380961111111" class="main-contact__link">
+                        <svg class="main-contact__icon" width="16" height="16" ><use href="./images/icon/icon.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
                 </li>
             </ul>
             </div>
