--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <!-- <link rel="stylesheet" href="./css/modern-normalize.css" /> -->
     <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
-    <link rel="stylesheet" href="/css/main.min.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!--Верхняя линия-->
