--- a/portfolio.html
+++ b/portfolio.html
@@ -10,40 +10,38 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <!-- <link rel="stylesheet" href="./css/modern-normalize.css" />
-    <link rel="stylesheet" href="./css/styles.css" /> -->
   </head>
   <body>
     <!--Верхняя линия-->
-    <header class="header-br">
+    <header class="header">
       <div class="container main-flex">
         <nav class="main-nav">
-          <a href="./index.html" class="main-nav__logo"
-            >Web<span class="main-nav__title">Studio</span></a
+          <a href="./index.html" class="logo"
+            >Web<span class="logo__title">Studio</span></a
           >
-          <ul class="site-nav list">
-            <li class="site-nav__navigation">
+          <ul class="site-nav">
+            <li class="site-nav__item">
               <a href="./index.html" class="site-nav__link">Студия</a>
             </li>
-            <li class="site-nav__navigation">
-              <a href="./portfolio.html" class="site-nav__link currnet"
+            <li class="site-nav__item">
+              <a href="./portfolio.html" class="site-nav__link current"
                 >Портфолио</a
               >
             </li>
-            <li class="site-nav__navigation">
+            <li class="site-nav__item">
               <a href="#" class="site-nav__link">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="main-contact list">
-          <li class="main-contact__list">
+        <ul class="main-contact">
+          <li class="main-contact__item">
             <a href="mailto:info@devstudio.com" class="main-contact__link">
               <svg class="main-contact__icon" width="16" height="12">
                 <use href="./images/icon/icon.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
-          <li class="main-contact__list">
+          <li class="main-contact__item">
             <a href="tel:+380961111111" class="main-contact__link">
               <svg class="main-contact__icon" width="16" height="16">
                 <use href="./images/icon/icon.svg#icon-smartphone"></use></svg
@@ -58,7 +56,7 @@
       <section class="section">
         <div class="container">
           <h1 class="hidden-header">Портфолио</h1>
-          <ul class="button-portfolio list">
+          <ul class="button-portfolio">
             <li class="button-portfolio__list">
               <input
                 type="button"
@@ -96,7 +94,7 @@
             </li>
           </ul>
           <!--projects-->
-          <ul class="card-set list">
+          <ul class="card-set">
             <li class="card-set__item">
               <article class="projects">
                 <a href="#"></a>
@@ -340,7 +338,7 @@
         </div>
         <div class="footer-link">
           <h4 class="footer-link__titel">присоединяйтесь</h4>
-          <ul class="footer-link__social list">
+          <ul class="footer-link__social">
             <li class="social-footer">
               <a href="" class="social-footer__link">
                 <svg class="social-link__icon" width="20" height="20">
