--- a/index.html
+++ b/index.html
@@ -395,15 +395,13 @@
     <footer class="footer">
       <div class="container flex-box">
         <div class="footer-addres">
-          <a href="./index.html" class="footer-addres__logo"
-            >Web<span class="footer-addres__title">Studio</span></a
+          <a href="./index.html" class="footer__logo"
+            >Web<span class="footer-logo__title">Studio</span></a
           >
-          <address class="address-content">
-            <p class="address-content__contact">
-              г. Киев, пр-т Леси Украинки, 26
-            </p>
-            <ul class="contact-footer">
-              <li class="contact-footer__list">
+          <address class="address-box">
+            <p class="address-box__title">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="contact-footer__list">
+              <li class="contact-footer__item">
                 <a href="mailto:info@devstudio.com" class="contact-footer__link"
                   >info@devstudio.com</a
                 >
@@ -416,33 +414,33 @@
             </ul>
           </address>
         </div>
-        <div class="footer-link">
-          <h4 class="footer-link__titel">присоединяйтесь</h4>
-          <ul class="footer-link__social">
-            <li class="social-footer">
-              <a href="" class="social-footer__link">
-                <svg class="social__icon" width="20" height="20">
+        <div class="footer-box">
+          <h4 class="footer-box__titel">присоединяйтесь</h4>
+          <ul class="footer-box__list">
+            <li class="footer-box__item">
+              <a href="" class="footer-box__link">
+                <svg class="footer-box__icon" width="20" height="20">
                   <use href="./images/icon/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-footer">
-              <a href="" class="social-footer__link">
-                <svg class="social__icon" width="20" height="20">
+            <li class="footer-box__item">
+              <a href="" class="footer-box__link">
+                <svg class="footer-box__icon" width="20" height="20">
                   <use href="./images/icon/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-footer">
-              <a href="" class="social-footer__link">
-                <svg class="social__icon" width="20" height="20">
+            <li class="footer-box__item">
+              <a href="" class="footer-box__link">
+                <svg class="footer-box__icon" width="20" height="20">
                   <use href="./images/icon/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-footer">
-              <a href="" class="social-footer__link">
-                <svg class="social__icon" width="20" height="20">
+            <li class="footer-box__item">
+              <a href="" class="footer-box__link">
+                <svg class="footer-box__icon" width="20" height="20">
                   <use href="./images/icon/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
